# This file declares the dependencies for the Rust program.
[package]
name = "stm32-blue-pill-rust"
version = "0.3.2"
authors = ["Lee Lup Yuen <luppy@appkaki.com>"]
description = "A sample Rust application for STM32 Blue Pill microcontrollers"
keywords = ["arm", "cortex-m", "stm32", "bluepill"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lupyuen/stm32-blue-pill-rust"

# To minimize the executable size, we should always compile with --release flag. 
[profile.release]
# To optimize the usage of many crates, we should link with Link Time Optimization (LTO). 
lto = true
codegen-units = 1
# Enable debugging in release mode.
debug = true

[dependencies]
embedded-hal = "0.2.3"
nb = "0.1.2"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.11"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"

[dependencies.stm32f1xx-hal]
version = "0.6.1"
features = ["rt", "stm32f103", "medium"]